wp-content/themes/mitm/assets/sass/global/_header.scss
//
// Header
// --------------------------------------------------

.site-header {
    @include clearfix;
    font-size: 13px;
    .wrapper {
        padding: 10px 0 0 71px;
        position: relative;
    }
    .contact-info {
        color: $White;
        padding: 40px 0px 30px 0px;
        position: relative;
        //background: url("../images/contact-bg.png)
        @include bg-img(contact-bg, png);
        background-color: $Gray;
        @media (max-width: $screen-tablet) {
            @include size(768px, 340px);
            @include bg-img-center(contact-ng, png);
            background-size: 100%;
        }
        @media (max-width: $screen-xs-max) {
            @include size(auto, auto);
            background-color: $Gray;
            //@include bg-img-center(contact-ng, png);
            background-size: 100%;
        }
        .left {
            padding: 30px 0 0 0;
            .contact_text {
                width: 300px;
                margin-left: 28px;
                @extend %pull-left;
                p {
                    @include font-shorthand(11px, 400px, 19px);
                    @extend %merriweather;
                    padding-bottom: 18px;
                    span, a {
                        color: $Orange;
                        text-decoration: none;
                        font-style: italic;
                    }
                }
                @media (max-width: $screen-xs-max) {
                    margin-left: 0px;
                    width: 200px;
                }
            }
            .social-links {
                margin: 15px 0 0 28px;
                a {
                    background-position: center -3px;
                    margin: 1px 11px 0 2px;
                    width: 42px;
                    border-radius: 2px;
                    height: 41px;
                }
            }
        }
        .right {
            padding: 0;
            position: relative;
            .contact {
                margin-right: 25px;
                @extend %text-center;
                .title-section {
                    color: $Orange;
                    font-style: italic;
                    margin-bottom: 10px;
                }
                .form {
                    width: 86%;
                    float: right;
                    .input-text {
                        @extend %input-text;
                        margin-bottom: 15px;
                        -webkit-appearance: none;
                        -webkit-border-radius: 0;
                        &:focus {
                            -webkit-box-shadow: 0px 0px 2px white;
                            -moz-box-shadow: 0px 0px 2px white;
                            box-shadow: 0px 0px 2px white;
                            border: 1px solid white;
                        }
                    }
                    input {
                        @include size(100%, 38px);
                        -webkit-appearance: none;
                        -webkit-border-radius: 0;
                    }
                    textarea {
                        padding: 10px;
                        @include size(100%, 78px);
                        -webkit-appearance: none;
                        -webkit-border-radius: 0;
                    }
                    span {
                        color: $Orange;
                        font-style: italic;
                        font-size: 11px;
                        margin: -5px 0 10px;
                        display: block;
                    }
                }
                .button {
                    @include size(100%, auto);
                    cursor: pointer;
                }
                @media (max-width: $screen-xs-max) {
                    .title-section {
                        @include font-shorthand(13px, 400px, 21px);
                    }
                    .form {
                        @media (max-width: $screen-xs-max) {
                            margin-left: 0px;
                            width: 200px;
                            .input-text {
                                //border: 1px solid red !important;
                                @include font-shorthand(13px, 400px, 21px);
                            }
                        }
                    }
                }
            }
            .close-box {
                position: absolute;
                top: -15px;
                right: -4px;
                z-index: 1;
                @include size(26px, 28px);
                @include bg-img-center(orange_close, png);
            }
        }
        @media (max-width: $screen-xs-max) {
            @include size(auto, auto);
            background: $Gray;
            padding: 30px 0;
            .left {
                padding: 0;
                margin-left: 0px;
                .contact_text {
                    width: 220px;
                    .email {
                        padding-bottom: 0;
                    }
                }
                .social-links {
                    float: right;
                    margin: 0;
                    padding: 0;
                    width: 45px;
                    a {
                        margin: 0 0 10px;
                    }
                }
            }
            background-size: 100%;
            .right {
                float: none;
                clear: both;
                .close-box {
                    display: none;
                }
                .contact {
                    margin: 0;
                    .title-section {
                        text-align: left;
                    }
                    .form {
                        width: 100%;
                    }
                }
            }
        }
    }
    .mob-nav {
        display: none;
        ul {
            li {
                border-bottom: 1px solid $White;
                a {
                    display: block;
                    background-color: $BgColor4;
                    color: $Black;
                    padding: 15px 0;
                    text-transform: uppercase;
                    text-decoration: none;
                    @extend %Raleway;
                    @extend %text-center;
                    @extend %pharagraph-level-3;
                    &:hover, &.active {
                        color: $White;
                        background-color: $Orange;
                        //@include bg-img-only(close_s, png, no-repeat, 97%, center);
                   
                    }
                    &.active {
                        @include bg-img-only(close_s, png, no-repeat, 97%, center);
                    }
                }
            }
        }
        @media (max-width: $screen-xs-max) {
            display: block;
        }
    }
    .mob-menu {
        float: right;
        display: none;
        margin: 22px 40px 0 0;
        @include size(40px, 40px);
        a {
            display: block;
            @include size(40px, 40px);
            @include bg-img(menu-icon, png);
            &:hover, &.active {
                @include bg-img(menu-icon_o, png);
            }
        }
        @media (max-width: $screen-xs-max) {
            display: block;
            margin: 22px 80px 0 0;
        }
    }
    .header-section {
        padding: 0;
        .logo {
            margin: 14px 0 0 56px;
            //@include size(78px, auto);
            @extend %pull-left;
            a {
                @include size(78px, 83px);
                @include bg-img(logo-tab, png);
                display: block;
                background-size: 100%;
                text-indent: 99999px;
                font-size: 0;
            }
            @media (max-width: $screen-xs-max) {
                margin: 10px 0 10px 90px;
                //width: 10%;
                a {
                    @include bg-img(logo-s, png);
                    @include size(63px, 65px);
                }
            }
        }
        .mob-page-info {
            width: auto;
            display: none;
            margin: 33px auto 0;
            text-transform: uppercase;
            @extend %text-center;
            @include font-shorthand(12px, 500, 14px);
            @extend %Raleway;
            .current-page {
                //display: block;
                border-bottom: 4px solid;
                margin-bottom: 1px;
            }
            @media (max-width: $screen-xs-max) {
                display: block;
            }
        }
        // Main Navigation
        .main-navigation {
            padding: 0;
            margin: 0px 35px 0 0;
            @extend %pull-right;
            @extend %Raleway;
            li {
                margin: 0 20px 0 27px;
                padding: 34px 0 0;
                @extend %pull-left;
                @include transition(all 0.5s ease);
                a {
                    color: $Black;
                    font-size: 16px;
                    margin: 0 10px;
                    padding: 20px 10px 7px;
                    display: block;
                    text-transform: uppercase;
                    text-decoration: none;
                    &:hover {
                        color: lighten($Black, 50%);
                    }
                }
                &.contact-us {
                    background-color: $LightGray;
                    @extend %text-center;
                    @include bg-img-center(orange_arrow, png);
                    @include size(100px, auto);
                    a {
                        padding: 10px 0px 20px;
                        line-height: 20px;
                    }
                }
                &.current-menu-item {
                    a {
                        border-bottom: 5px solid #000;
                    }
                }
            }
            @media (max-width: $screen-xs-max) {
                display: none;
            }
        }
    }
}

